2004-10-13  Alexander Larsson  <alexl@redhat.com>

	* gnome-vfs-2.0.pc.in:
	Add missing dependencies.
	Patch from Juergen George Sawinski <j4y54w@sawinski.de>

2004-10-13  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-socket-buffer.c (flush):
	Correctly move memory in buffer when we've written some bytes.

2004-10-11  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/Makefile.am:
	Fix build issues with concurrent installs. Patch from
	Chris Kelso <ckelso@rooneyholdings.com>.
		
2004-10-11  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump
	
=== gnome-vfs 2.8.2 ===

2004-10-11  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release.

2004-10-11  Alexander Larsson  <alexl@redhat.com>

	* modules/smb-method.c (do_read_directory),
	(update_workgroup_cache): 
	Ignore entries with empty name. (#154670)

2004-10-09  Christian Kellner <gicmo@gnome.org>

	* modules/http-neon-method.c:
	Invoke received header callback before reading the data on a
	GET (See comment in source code for more information)
	Thanks to Sebastien Bacher  <seb128@debian.org> for
	helping and testing. This should now finally fix bug
	#150561.
		
2004-10-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Add --disable-howl flag.
	Patch from Peter Johanson <latexer@gentoo.org>

2004-10-07  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-monitor.c (send_uri_changes_now):
	Don't touch send_at of already sent events.
	Patch from Martin Wehner <martin.wehner@epost.de>

2004-10-07  Alexander Larsson  <alexl@redhat.com>

	* modules/network-method.c: (notify_gconf_value_changed),
	(vfs_module_init):
	* modules/smb-method.c: (smb_uri_type), (do_open_directory):
	Use the smb.conf defined workgroup as the default if not
	set in gconf.
	Patch from James Henstridge <james@jamesh.id.au>
	
2004-10-07  Christian Kellner  <gicmo@gnome.org>

	* doc/tmpl/gnome-vfs-inet-connection.sgml:
	* doc/tmpl/gnome-vfs-socket-buffer.sgml: