@@ -1,3 +1,12 @@
+2004-10-15  Alexander Larsson  <alexl@redhat.com>
+
+	* libgnomevfs/gnome-vfs-unix-mounts.c:
+	(_gnome_vfs_get_current_unix_mounts),
+	(_gnome_vfs_get_unix_mount_table):
+	Handle several changes to mtab/fstab in the same second.
+	Fix aix mtime check.
+	Patch from johnp@redhat.com
+
 2004-10-13  Alexander Larsson  <alexl@redhat.com>
 
 	* gnome-vfs-2.0.pc.in:
